--- a/index.html
+++ b/index.html
@@ -1,72 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Priscilla Sneakers - Home</title>
-</head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4;">
-
-  <header id="header" style="background-color: #333; color: white; padding: 1rem; text-align: center;">
-    <h1>Priscilla Sneakers</h1>
-    <p>Located in Acornhoek - We deliver anywhere in South Africa</p>
-  </header>
-  
-  <nav style="background-color: #444; padding: 1rem;">
-    <ul style="list-style: none; padding: 0; margin: 0; text-align: center;">
-      <li style="display: inline; margin-right: 1rem;"><a href="index.html" style="color: white; text-decoration: none;">Home</a></li>
-      <li style="display: inline; margin-right: 1rem;"><a href="about.html" style="color: white; text-decoration: none;">About Us</a></li>
-      <li style="display: inline; margin-right: 1rem;"><a href="products.html" style="color: white; text-decoration: none;">Products</a></li>
-      <li style="display: inline;"><a href="contact.html" style="color: white; text-decoration: none;">Contact</a></li>
-    </ul>
-  </nav>
-  
-  <div class="content" style="padding: 2rem;">
-    <h2>Welcome to Priscilla Sneakers</h2>
-    <p>Explore our collection of premium Jordan sneakers. Delivery anywhere in South Africa.</p>
-    
-    <!-- Section to display Jordan Sneaker images -->
-    <section id="jordan-sneakers" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px;">
-      <!-- Images will be dynamically added here -->
-    </section>
-  </div>
-  
-  <footer style="background-color: #333; color: white; text-align: center; padding: 1rem;">
-    <p>&copy; 2024 Priscilla Sneakers. All rights reserved.</p>
-  </footer>
-  
-  <script>
-    // Replace with your Unsplash access key
-    const unsplashAccessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
-
-    // Function to fetch Jordan Sneaker images from Unsplash
-    async function fetchJordanSneakers() {
-      try {
-        const response = await fetch(`https://api.unsplash.com/search/photos?query=jordan+sneakers&per_page=4&client_id=${unsplashAccessKey}`);
-        if (!response.ok) {
-          throw new Error('Failed to fetch images');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Priscilla Sneakers</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
         }
-        const data = await response.json();
-        const jordanSneakers = data.results;
+        .hero {
+            position: relative;
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #ffffff;
+            text-align: center;
+        }
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Dark overlay */
+            z-index: 1;
+        }
+        .hero div {
+            position: relative;
+            z-index: 2;
+        }
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+        .hero p {
+            font-size: 1.5rem;
+            margin-bottom: 2rem;
+        }
+        .btn {
+            display: inline-block;
+            padding: 1rem 2rem;
+            background-color: #ff5f6d;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #ff3b49;
+        }
+    </style>
+</head>
+<body>
+    <div class="hero" id="hero">
+        <div>
+            <h1>Welcome to Priscilla Sneakers</h1>
+            <p>Discover the latest trends in sneakers</p>
+            <a href="products.html" class="btn">Shop Now</a>
+        </div>
+    </div>
+    <script>
+        const accessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
+        const url = `https://api.unsplash.com/photos/random?query=NIKE-JORDAN&client_id=${accessKey}`;
 
-        const jordanSneakersSection = document.getElementById('jordan-sneakers');
-        jordanSneakers.forEach(photo => {
-          const img = document.createElement('img');
-          img.src = photo.urls.regular;
-          img.alt = photo.alt_description;
-          img.style.width = '100%';
-          img.style.height = 'auto';
-          img.style.borderRadius = '8px';
-          img.style.boxShadow = '0 0 10px rgba(0, 0, 0, 0.1)';
-          jordanSneakersSection.appendChild(img);
-        });
-      } catch (error) {
-        console.error('Error fetching Jordan Sneaker images:', error.message);
-      }
-    }
-
-    // Call function to fetch and display Jordan Sneaker images when the page loads
-    document.addEventListener('DOMContentLoaded', fetchJordanSneakers);
-  </script>
+        fetch(url)
+            .then(response => response.json())
+            .then(data => {
+                const hero = document.getElementById('hero');
+                hero.style.backgroundImage = `url(${data.urls.regular})`;
+            })
+            .catch(error => {
+                console.error('Error fetching image from Unsplash:', error);
+            });
+    </script>
 </body>
 </html>
