--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
     </style>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+        </ul>
+    </nav>
+
     <div class="hero" id="hero">
         <div>
             <h1>Welcome to Priscilla Sneakers</h1>
@@ -67,6 +75,7 @@
             <a href="products.html" class="btn">Shop Now</a>
         </div>
     </div>
+
     <script>
         const accessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
         const url = `https://api.unsplash.com/photos/random?query=NIKE-JORDAN&client_id=${accessKey}`;
@@ -83,3 +92,4 @@
     </script>
 </body>
 </html>
+
