--- a/products.html
+++ b/products.html
@@ -50,6 +50,14 @@
     </style>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+        </ul>
+    </nav>
+
     <div class="products" id="products">
         <h1>Our Products</h1>
         <div class="product">
