--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priscilla Sneakers</title>
     <style>
+        /* Your existing CSS styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -57,30 +58,22 @@
         .btn:hover {
             background-color: #ff3b49;
         }
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: #ffffff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="hero" id="hero">
         <div>
             <h1>Welcome to Priscilla Sneakers</h1>
@@ -89,6 +82,7 @@
         </div>
     </div>
     <script>
+        // Your existing JavaScript for hero image fetching
         const accessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
         const url = `https://api.unsplash.com/photos/random?query=NIKE-JORDAN&client_id=${accessKey}`;
 
@@ -104,4 +98,3 @@
     </script>
 </body>
 </html>
-
