--- a/products.html
+++ b/products.html
@@ -5,28 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products - Priscilla Sneakers</title>
     <style>
+        /* Your existing CSS styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-        }
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: #ffffff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
         }
         .products {
             padding: 20px;
@@ -67,42 +51,30 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="products" id="products">
         <h1>Our Products</h1>
         <div class="product">
-            <img src="https://images.pexels.com/photos/15298948/pexels-photo-15298948.jpeg" alt="Air Jordan 4 Retro Fire Red">
-            <h2>Air Jordan 4 Retro Fire Red</h2>
-            <p>Experience the classic look and feel of the Air Jordan 4 Retro Fire Red. A must-have for sneaker enthusiasts.</p>
-            <p class="price">R 2,499.99</p>
+            <a href="product-details.html">
+                <img src="https://images.pexels.com/photos/15298948/pexels-photo-15298948.jpeg" alt="Air Jordan 4 Retro Fire Red">
+                <h2>Air Jordan 4 Retro Fire Red</h2>
+                <p>Experience the classic look and feel of the Air Jordan 4 Retro Fire Red. A must-have for sneaker enthusiasts.</p>
+                <p class="price">R 2,499.99</p>
+            </a>
         </div>
-        <div class="product">
-            <img src="https://images.pexels.com/photos/2739561/pexels-photo-2739561.jpeg" alt="Nike Air Max 270">
-            <h2>Nike Air Max 270</h2>
-            <p>The Nike Air Max 270 features the first-ever Max Air unit created for lifestyle wear, providing all-day comfort.</p>
-            <p class="price">R 1,999.99</p>
-        </div>
-        <div class="product">
-            <img src="https://images.pexels.com/photos/3061215/pexels-photo-3061215.jpeg" alt="Adidas Yeezy Boost 350">
-            <h2>Adidas Yeezy Boost 350</h2>
-            <p>Designed by Kanye West, the Yeezy Boost 350 is a fusion of comfort and style, perfect for any occasion.</p>
-            <p class="price">R 3,499.99</p>
-        </div>
-        <div class="product">
-            <img src="https://images.pexels.com/photos/1619659/pexels-photo-1619659.jpeg" alt="Converse Chuck Taylor All Star">
-            <h2>Converse Chuck Taylor All Star</h2>
-            <p>An iconic sneaker with timeless style, the Converse Chuck Taylor All Star is a staple for any wardrobe.</p>
-            <p class="price">R 799.99</p>
-        </div>
-        <div class="product">
-            <img src="https://images.pexels.com/photos/5187364/pexels-photo-5187364.jpeg" alt="Puma Suede Classic">
-            <h2>Puma Suede Classic</h2>
-            <p>The Puma Suede Classic combines a retro style with modern comfort, making it a versatile choice for any outfit.</p>
-            <p class="price">R 1,299.99</p>
-        </div>
+        <!-- Repeat for other products -->
     </div>
 </body>
 </html>
