--- a/index.html
+++ b/index.html
@@ -58,22 +58,36 @@
         .btn:hover {
             background-color: #ff3b49;
         }
+        /* Footer styles */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        footer ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        footer ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+        footer ul li a:hover {
+            color: #ff5f6d;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="privacy.html">Privacy Policy</a></li>
-                <li><a href="terms.html">Terms of Service</a></li>
-            </ul>
-        </nav>
-    </header>
     <div class="hero" id="hero">
         <div>
             <h1>Welcome to Priscilla Sneakers</h1>
@@ -81,6 +95,13 @@
             <a href="products.html" class="btn">Shop Now</a>
         </div>
     </div>
+    <footer>
+        <ul>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
+        </ul>
+    </footer>
     <script>
         // Your existing JavaScript for hero image fetching
         const accessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
