--- a/index.html
+++ b/index.html
@@ -58,6 +58,37 @@
         .btn:hover {
             background-color: #ff3b49;
         }
+        /* Header styles */
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 1.8rem;
+        }
+        header nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        header nav ul li {
+            margin-right: 20px;
+        }
+        header nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+        header nav ul li a:hover {
+            color: #ff5f6d;
+        }
         /* Footer styles */
         footer {
             background-color: #333;
@@ -88,6 +119,20 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Priscilla Sneakers</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="cart.html">Cart</a></li>
+                <li><a href="checkout.html">Checkout</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="hero" id="hero">
         <div>
             <h1>Welcome to Priscilla Sneakers</h1>
@@ -95,6 +140,7 @@
             <a href="products.html" class="btn">Shop Now</a>
         </div>
     </div>
+
     <footer>
         <ul>
             <li><a href="blog.html">Blog</a></li>
@@ -102,6 +148,7 @@
             <li><a href="terms.html">Terms of Service</a></li>
         </ul>
     </footer>
+
     <script>
         // Your existing JavaScript for hero image fetching
         const accessKey = 'i6eiZQTH093E3J47B03UVrUTCxhRBu5URWomT-dvA0M';
